# Robot-Sensing-Navigation

./: README.md
LAB1 GPS Sensor BU-353N/src/: analyse_stationary.py  analyse_walking.py
LAB1 GPS Sensor BU-353N/src/gps_driver/: package.xml  setup.py
LAB1 GPS Sensor BU-353N/src/gps_driver/gps_driver/: driver.py
LAB1 GPS Sensor BU-353N/src/gps_msgs/: CMakeLists.txt
LAB1 GPS Sensor BU-353N/src/stationary_data/: stationary_data_0.db3
LAB1 GPS Sensor BU-353N/src/walking_data/: metadata.yaml  walking_data_0.db3
LAB3-IMU VectorNav-VN100/analysis/: allan.m  allan.py  bag.py  convert_csv.py  convert_mat.py
LAB3-IMU VectorNav-VN100/data/: fivehourdata.txt
LAB3-IMU VectorNav-VN100/data/stationarydata.bag/: metadata.yaml
LAB3-IMU VectorNav-VN100/install/: local_setup.sh  setup.sh
LAB3-IMU VectorNav-VN100/log/: latest_build
LAB3-IMU VectorNav-VN100/src/imu_driver/: package.xml
LAB3-IMU VectorNav-VN100/src/imu_msgs/: CMakeLists.txt
LAB4- Automotive Dead Reckoning using GPS & IMU/analysis/: Analysis.m  circle_analysis.py  convert_mat.py
LAB4- Automotive Dead Reckoning using GPS & IMU/data/: circles.mat  drive.mat
LAB4- Automotive Dead Reckoning using GPS & IMU/data/data_driving.bag/: metadata.yaml
LAB4- Automotive Dead Reckoning using GPS & IMU/data/data_going_in_circles.bag/: data_going_in_circles.bag_0.db3  metadata.yaml
LAB4- Automotive Dead Reckoning using GPS & IMU/install/: local_setup.sh  setup.sh
LAB4- Automotive Dead Reckoning using GPS & IMU/log/: latest_build
LAB4- Automotive Dead Reckoning using GPS & IMU/src/gps_msgs/: CMakeLists.txt
LAB5 Camera Mosaic-Panaroma/: Testing.ipynb  Untitled2.ipynb  image_stiching_cinder.py  image_stitch.py  testing
LAB5 Camera Mosaic-Panaroma/.ipynb_checkpoints/: Image_stitching_CV-Copy1-checkpoint.ipynb  Testing-checkpoint.ipynb
LAB5 Camera Mosaic-Panaroma/John/: harris.py  utils.py
PA0/: PA0_Report
PA1 Basic Publish & Subscribe/py_pubsub/: package.xml  setup.py
PA1 Basic Publish & Subscribe/py_srvcli/: package.xml  setup.py
(+81 files in other folders)
